<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    android:orientation="vertical" 
    android:background="@drawable/back_ground" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout 
        android:gravity="center" 
        android:orientation="horizontal" 
        android:background="@drawable/header_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/app_name" 
            style="@style/text_header_white" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center_vertical" 
        android:orientation="horizontal" 
        android:background="@drawable/list_item_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:minHeight="?android:listPreferredItemHeight">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="0.0dip" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10.0dip" 
            android:layout_marginTop="5.0dip" 
            android:layout_marginRight="10.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:layout_weight="1.0">
            
            <TextView 
                android:padding="2.0dip" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/service" 
                android:singleLine="true" 
                style="@style/text_big_default" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:clickable="true" 
            android:layout_width="80.0dip" 
            android:layout_height="fill_parent">
            
            <com.wujianai.rpk.view.CheckBoxView 
                android:layout_gravity="center_vertical" 
                android:id="@id/service_control" 
                android:focusable="false" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginRight="8.0dip" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
        <ImageView 
            android:background="@drawable/header_icon_line" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center_vertical" 
        android:orientation="horizontal" 
        android:background="@drawable/list_item_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:minHeight="?android:listPreferredItemHeight">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="0.0dip" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10.0dip" 
            android:layout_marginTop="5.0dip" 
            android:layout_marginRight="10.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:layout_weight="1.0">
            
            <TextView 
                android:padding="2.0dip" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/bootauto" 
                android:singleLine="true" 
                style="@style/text_big_default" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:clickable="true" 
            android:layout_width="80.0dip" 
            android:layout_height="fill_parent">
            
            <com.wujianai.rpk.view.CheckBoxView 
                android:layout_gravity="center_vertical" 
                android:id="@id/bootauto_control" 
                android:focusable="false" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginRight="8.0dip" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
        <ImageView 
            android:background="@drawable/header_icon_line" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center_vertical" 
        android:orientation="horizontal" 
        android:background="@drawable/list_item_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:minHeight="?android:listPreferredItemHeight">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="0.0dip" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10.0dip" 
            android:layout_marginTop="5.0dip" 
            android:layout_marginRight="10.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:layout_weight="1.0">
            
            <TextView 
                android:padding="2.0dip" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/setting" 
                android:singleLine="true" 
                style="@style/text_big_default" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:gravity="center" 
            android:orientation="horizontal" 
            android:id="@id/item_check_area" 
            android:clickable="true" 
            android:layout_width="80.0dip" 
            android:layout_height="fill_parent">
            
            <ImageView 
                android:layout_gravity="center_vertical" 
                android:id="@id/setting" 
                android:focusable="false" 
                android:clickable="true" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginRight="8.0dip" 
                android:src="@drawable/icon_more_blue" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
        <ImageView 
            android:background="@drawable/header_icon_line" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center_vertical" 
        android:orientation="horizontal" 
        android:background="@drawable/list_item_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:minHeight="?android:listPreferredItemHeight">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="0.0dip" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10.0dip" 
            android:layout_marginTop="5.0dip" 
            android:layout_marginRight="10.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:layout_weight="1.0">
            
            <TextView 
                android:padding="2.0dip" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/about" 
                android:singleLine="true" 
                style="@style/text_big_default" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:gravity="center" 
            android:orientation="horizontal" 
            android:id="@id/item_check_area" 
            android:clickable="true" 
            android:layout_width="80.0dip" 
            android:layout_height="fill_parent">
            
            <ImageView 
                android:layout_gravity="center_vertical" 
                android:id="@id/about" 
                android:focusable="false" 
                android:clickable="true" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginRight="8.0dip" 
                android:src="@drawable/icon_more_blue" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
        <ImageView 
            android:background="@drawable/header_icon_line" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
</LinearLayout>